# frdfm_ml_public

./: .gitignore  README.md  pyproject.toml  setup.py
data/: Moon.txt  data1.csv  en_fr_size.py  examine_en_fr.py  split_en_fr.py
examples/: README.md  en_fr_dataloader.py
examples/RAG/: README.md  simple_RAG_indexer.py  simple_RAG_retriever.py
examples/data/: data_gen.py
examples/en-fr translation/: en_fr_translation.py
examples/en_fr_translation/: README.md  en_fr_dataloader.py  en_fr_translation.py  en_fr_translation_fake.py
frdfm_ml/utils/: AnimalTokenizer.py  data_loader.py  dataset_utils.py  gen_translation_utils.py  generators.py  test_encoding_utils.py
frdfmml/utils/: RAG_utils.py  data_loader.py  dataset_utils.py  encoding_utils.py  file_utils.py  gen_translation_utils.py  generators.py
